--- a/meey/assets/css/style.css
+++ b/meey/assets/css/style.css
@@ -10,11 +10,22 @@
 
 body {
   position: relative;
-  background: #eff2f7;
+
   font-family: meey-medium;
+  scroll-behavior: smooth;
+}
+li {
+  list-style: none;
+}
+a {
+  text-decoration: none;
 }
 section {
   padding: 40px 13vw 0;
+  background: #eff2f7;
+}
+section:nth-child(2) {
+  background: #fff;
 }
 
 /* BANNER---------------------------------------------------------- */
@@ -23,6 +34,8 @@ section {
   width: 100%;
   height: 100vh;
   overflow: hidden;
+  display: flex;
+  align-items: center;
 }
 .banner .background-banner {
   position: absolute;
@@ -34,7 +47,7 @@ section {
 }
 .banner .background-banner img {
   position: absolute;
-  top: -100px;
+  top: 0;
   width: 100%;
   object-fit: cover;
 }
@@ -48,29 +61,196 @@ section {
 }
 
 /* nav */
+.nav.sticky {
+  padding: 5px 13vw !important;
+  background-color: #eff2f7;
+  box-shadow: 0 5px 20px rgba(0, 0, 0, 0.1);
+}
 .nav {
   padding: 20px 13vw;
   display: flex;
   flex-direction: row;
   align-items: center;
+  position: fixed;
+  top: 0;
+  transition: 0.5s;
+  width: 100%;
+  z-index: 1000;
+}
+.nav.sticky .logo h5 {
+  filter: invert(1);
+}
+.nav.sticky .nav-link {
+  filter: invert(1);
+}
+.nav.sticky #language p,
+.nav.sticky #language .earth,
+.nav.sticky #language .arrow {
+  filter: invert(1);
+}
+.nav.sticky #language .arrow {
+  display: block !important;
 }
 .nav .logo {
-  padding-right: 30px ;
+  padding-right: 30px;
   display: flex;
   flex-direction: row;
   align-items: center;
 }
-.nav .logo img{
+.nav .logo img {
   width: 49px;
-
 }
-.nav .logo h5{
+.nav .logo h5 {
   margin-left: 20px;
   float: right;
   text-align: center;
   color: rgba(255, 255, 255, 1);
   font-size: 22px;
-  
+}
+
+.nav .nav-link {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.nav .nav-link ul li {
+  float: left;
+  padding: 20px;
+  margin-right: 0.2rem;
+}
+.nav .nav-link ul li a {
+  color: #fff;
+}
+
+.nav #language {
+  transition: all 0.5s linear;
+  display: inline-block;
+  position: relative;
+  border-radius: 2px;
+}
+
+.nav #language:hover,
+.nav #language:focus {
+  background: #fff;
+  cursor: pointer;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+}
+.nav #language .btnDropDw {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 10px 10px;
+  transition: all 0.5s linear;
+}
+
+.nav #language p {
+  padding: 0 10px;
+  color: #fff;
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none; /* Safari */
+  -khtml-user-select: none; /* Konqueror HTML */
+  -moz-user-select: none; /* Old versions of Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+  user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome, Edge, Opera and Firefox */
+}
+/* .nav .language:hover p {
+  color: #111;
+} */
+.nav #language:hover .earth,
+.nav #language:hover .arrow,
+.nav #language:hover p {
+  filter: invert(1);
+  transition: all 0.5s linear;
+}
+.nav #language .arrow {
+  width: 20px;
+  display: block !important;
+}
+.nav #language #list-lang {
+  display: none;
+  text-align: center;
+  position: absolute;
+  bottom: -90px;
+  background: #fff;
+  width: 100%;
+  transition: all 0.5s linear;
+  overflow: auto;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.nav #language #list-lang a {
+  display: block;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+}
+.nav #language #list-lang a:hover {
+  background: rgba(26, 75, 183, 1);
+  color: #fff;
+  transition: all 0.3s linear;
+}
+
+.nav .btn-download {
+  padding: 8px 38px;
+  background: #fff;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  border-radius: 35px;
+  margin-left: 15px;
+  color: rgba(26, 75, 183, 1);
+  font-weight: bold;
+}
+/* big-image*/
+.banner .big-image-banner {
+  position: absolute;
+  width: 40%;
+  right: 0;
+  top: 5%;
+  z-index: 1;
+}
+.banner .big-image-banner img {
+  width: 100%;
+}
+/*  */
+.banner .content-banner {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  text-align: left;
+  padding: 20px 13vw;
+  height: 50%;
+  color: #fff;
+  width: 60%;
+}
+.banner .content-banner .introduce-banner {
+  padding: 30px 0 20px 0;
+}
+.banner .content-banner .list-func-produce {
+  padding-bottom: 20px;
+}
+.banner .content-banner .list-func-produce ul li {
+  display: flex;
+  align-items: center;
+}
+.banner .content-banner .list-func-produce ul li::before {
+  content: "•";
+  font-size: 40px;
+  padding-right: 10px;
+}
+.banner .content-banner .download-app {
+  display: flex;
+  flex-direction: row;
+}
+.banner .content-banner .download-app .qr-code {
+  margin-right: 15px;
+}
+.banner .content-banner .download-app .link-download {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
 }
 /* SVG */
 .custom-shape-divider-bottom-1606731080 {
@@ -91,7 +271,7 @@ section {
 }
 
 .custom-shape-divider-bottom-1606731080 .shape-fill {
-  fill: #ffffff;
+  fill: #fff;
 }
 /*  */
 .custom-shape-divider-bottom-1606731045 {
@@ -113,6 +293,188 @@ section {
 
 .custom-shape-divider-bottom-1606731045 .shape-fill {
   fill: rgba(26, 75, 183, 1);
+}
+/* SALIENT-FEATURES------------------------------------------------ */
+#salient-features {
+  display: flex;
+  flex-direction: column;
+  background: #fff;
+}
+.title-section-left {
+  width: 301px;
+  height: 61px;
+  color: rgba(26, 75, 183, 1);
+  font-style: normal;
+  font-weight: bold;
+  font-size: 25px;
+  line-height: 36px;
+  position: relative;
+  text-align: right;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 30px;
+}
+.title-section-left img {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+#salient-features .main-feature {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+#salient-features .main-feature .feature-box {
+  width: 40%;
+  height: 343px;
+  margin-bottom: 30px;
+  position: relative;
+}
+#salient-features .main-feature .feature-box:nth-child(2n + 1) {
+  margin-left: 70px;
+}
+#salient-features .main-feature .feature-box .backgr-fea {
+  width: 100%;
+  position: relative;
+}
+#salient-features .main-feature .feature-box .backgr-fea img {
+  position: absolute;
+}
+#salient-features .main-feature .feature-box .backgr-fea img:first-child {
+  top: 0;
+  width: 100%;
+  right: 0;
+}
+#salient-features
+  .main-feature
+  .feature-box:first-child
+  .backgr-fea
+  img:nth-child(2) {
+  top: 3px;
+  right: 20px;
+}
+#salient-features
+  .main-feature
+  .feature-box:first-child
+  .backgr-fea
+  img:last-child {
+  top: 40px;
+  right: 100px;
+}
+
+#salient-features
+  .main-feature
+  .feature-box:nth-child(2)
+  .backgr-fea
+  img:last-child {
+  top: 200px;
+  right: 50px;
+}
+
+#salient-features
+  .main-feature
+  .feature-box:nth-child(3)
+  .backgr-fea
+  img:last-child {
+  top: 10px;
+  right: 50px;
+}
+#salient-features
+  .main-feature
+  .feature-box:last-child
+  .backgr-fea
+  img:nth-child(2) {
+  top: -20px;
+  left: 50px;
+}
+#salient-features
+  .main-feature
+  .feature-box:last-child
+  .backgr-fea
+  img:last-child {
+  top: 250px;
+  right: 40px;
+}
+
+#salient-features .main-feature .feature-box .img-z1 {
+  position: absolute;
+  bottom: -2%;
+  left: -25%;
+}
+#salient-features .main-feature .feature-box .title-fea {
+  font-weight: bold;
+  position: absolute;
+  top: 15%;
+  left: 40%;
+}
+#salient-features .main-feature .feature-box .content-fea {
+  position: absolute;
+  top: 30%;
+  left: 40%;
+  width: 50%;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 24px;
+  color: #4b5d68;
+}
+/* TEAM-BULDING---------------------------------------------------- */
+#team-bulding {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+#team-bulding .main-bulding {
+  width: 55%;
+}
+#team-bulding .main-bulding .team-bulding-box {
+  padding: 40px 0 20px;
+}
+#team-bulding .main-bulding .team-bulding-box p {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 26px;
+  color: #1c2433;
+}
+#team-bulding .main-bulding .team-bulding-box .contain-sec-bx {
+  display: flex;
+  flex-direction: row;
+}
+#team-bulding .main-bulding .team-bulding-box .title-contain-box {
+  padding-bottom: 20px;
+  margin-left: 30px;
+}
+#team-bulding
+  .main-bulding
+  .team-bulding-box
+  .title-contain-box
+  .title-contain {
+  padding: 3px 0 15px;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 28px;
+  color: #1c2433;
+}
+#team-bulding .img-tb-box {
+  width: 50%;
+  position: absolute;
+  bottom: 10%;
+  right: -10%;
+}
+#team-bulding .img-tb-box img:first-child {
+  position: absolute;
+  bottom: -50px;
+  z-index: 1;
+}
+#team-bulding .img-tb-box img:last-child {
+  position: absolute;
+  bottom: 0;
+  left: 33%;
 }
 
 /* FUCTION--------------------------------------------------------- */
